--- a/tcc.tex
+++ b/tcc.tex
@@ -214,5 +214,6 @@ Esse trabalho fornece todo o processo de evolução do portal de algoritmos, o tra
 \bibliographystyle{abnt}
 
 \include{conteudo/capitulo7}
+\include{conteudo/capitulo8}
 
 \end{document}
