--- a/conteudo/capitulo1.tex
+++ b/conteudo/capitulo1.tex
@@ -1,8 +1,8 @@
 \chapter{Introdução}\label{cpIntroducao}
 
-No presente trabalho será realizada a evolução do módulo de gerenciamento do portal de algoritmos da Universidade de Caxias do Sul. No ano de 2016 foi concluido pelo aluno Gabriel Weber um trabalho que evoluiu o analisador algorítmico \cite{Weber2015}.
+No presente trabalho foi realizada a evolução do módulo de gerenciamento do portal de algoritmos da Universidade de Caxias do Sul. No ano de 2016 foi concluido pelo aluno Gabriel Weber um trabalho que evoluiu o analisador algorítmico \cite{Weber2015}.
 
-O portal de algoritmos, desenvolvido no ano de 2009 pelos professores Ricardo Vargas Dorneles e Delcino Picinin Junior, da Universidade de Caxias do Sul, tem por objetivo auxiliar no ensino da lógica de programação através da linguagem do português estruturado, também conhecida como portugol e é utilizado pelos alunos do \ac{CCET} e público em geral. Esse portal oferece ao aluno a possibilidade de exercitar sua lógica através de exercícios cadastrados pelos professores, utilizando a linguagem portugol em um editor específico. O aluno submete soluções de problemas a fim de validá-las e pode acompanhar seu desempenho através de um ranking de submissões de soluções corretas. O portal possui uma seção de gerenciamento que somente administradores podem acessar. Nessa administração há a possibilidade de acompanhar a evolução dos alunos, suas submissões de soluções, visualização e edição de usuário, de problemas, de dados de testes e palavras-chave \cite{Dorneles2004}.
+O portal de algoritmos, desenvolvido no ano de 2009 pelos professores Ricardo Vargas Dorneles e Delcino Picinin Junior, da Universidade de Caxias do Sul, tem por objetivo auxiliar no ensino da lógica de programação através da linguagem do português estruturado, também conhecida como portugol e é utilizado pelos alunos da Área de Conhecimento de Ciências Exatas e Engenharias e público em geral. Esse portal oferece ao aluno a possibilidade de exercitar sua lógica através de exercícios cadastrados pelos professores, utilizando a linguagem portugol em um editor específico. O aluno submete soluções de problemas a fim de validá-las e pode acompanhar seu desempenho através de um ranking de submissões de soluções corretas. O portal possui uma seção de gerenciamento que somente administradores podem acessar. Nessa administração há a possibilidade de acompanhar a evolução dos alunos, suas submissões de soluções, visualização e edição de usuário, de problemas, de dados de testes e palavras-chave \cite{Dorneles2004}.
 
 No ano de 2016 o \textit{software} cliente do portal de algorítmos foi refeito, pois naquele ano foi preciso migrar o programa escrito em \textit{Java Applet} para um aplicativo \textit{Desktop}, esse \textit{software Desktop} é instalado localmente e consumindo o \textit{Web Services} do portal de algorítmos antigo. No entanto, o \textit{software} servidor não foi migrado, e é neste contexto que este trabalho está inserido.
 
@@ -38,6 +38,6 @@ No Capítulo \ref{cpReengenhariaSoftware} é apresentada a reengenharia de \textit
 
 No Capítulo \ref{cpProposta} é apresentada a modelagem para a evolução do \textit{software}, suas interfaces e diagramas relacionados.
 
-No Capítulo \ref{seguranca} é apresentado uma proposta de segurança para o servidor, essa segurança deve ser configurado na infra-estrutura.
+No Capítulo \ref{seguranca} é apresentado uma proposta de segurança para o servidor, essa segurança deve ser configurada na infra-estrutura.
 
 No Capítulo \ref{cpConsideracoesParciais} são apresentadas as considerações parciais do trabalho.
