--- a/conteudo/capitulo4.tex
+++ b/conteudo/capitulo4.tex
@@ -52,7 +52,7 @@ A Tabela \ref{tbDescricaoTabelaPortalNovo} mostra as tabelas do banco de dados e
 \end{table}
 \FloatBarrier
 
-Ao realizar a modelagem do diagrama de classes de domínios do novo portal de algoritmos, foram padronizadas descrições de campos e descrições de classes para o padrão \textit{CamelCase}.
+Ao realizar a modelagem do diagrama de classes de domínios do novo portal de algoritmos, foram padronizados nomes das tabelas e colunas, de uma forma a ser mais descritivos.
 
 Na seção seguinte são descritos os requisitos de projeto que são os requisitos funcionais e não-funcionais.
 
@@ -1665,3 +1665,4 @@ Na camada de \textit{POJO e JAVA 8} é responsável pela manipulação dos dados tra
 
 Na camada de persistência temos o \ac{JDBC} que é responsável pela comunicação com o banco de dados \textit{Postgresql} 10.
  
+Até o presente momento foi apresentado a modelagem e estrutura do novo \textit{software}, a seguir é sugerido a configuração de segurança para o servidor de aplicação.
