--- a/conteudo/capitulo6.tex
+++ b/conteudo/capitulo6.tex
@@ -1,6 +1,6 @@
 \chapter{Considerações Finais}\label{cpConsideracoesParciais}
 
-O objetivo do trabalho era realizar a implementação de um \textit{software} novo visando a evolução do antigo. Esse objetivo foi entregue com alta qualidade e organização de código. Durante o o trabalho foram encontrado diversos problemas no \textit{software} antigo, esses problemas foram sendo resolvido de diversas formas, como as citadas abaixo.
+O objetivo do trabalho era realizar a implementação de um \textit{software} novo visando a evolução do antigo. Esse objetivo foi entregue em uma forma mais organizada em questão de arquitetura e codificação. Durante o o trabalho foram encontrados diversos problemas no \textit{software} antigo, esses problemas foram sendo resolvido de diversas formas, como as citadas abaixo.
 
 O portal antigo utilizava tecnologias antigas, como \textit{Java Applet}, \ac{HTML} sem estruturação e sem validações, esse problema foi resolvido utilizando \textit{AngularJS 4}, um \textit{framework javascript} para implementar o consumo de \ac{API} \ac{REST}, além do consumo de dados é preciso exibir esses dados, então foi utilizado um \textit{framework} de \ac{CSS}, esse conhecido como Bootstrap, com ele foi possível criar interface responsivas, bonitas e intuitivas para o uso do \textit{software}.
 
@@ -15,3 +15,5 @@ Com um banco de dados atual o \textit{software} está mais confiável no armazenam
 Com a implementação do novo gerenciador do portal de algoritmos concluimos que foi construido um \textit{software} robusto, organizado, com alta qualidade de código e de fácil entendimento sobre o que ele foi proposto.
 
 Chegamos no final desse trabalho com um \textit{software} bem escrito, estruturado e organizado com documentação de todas as chamadas das \ac{API}\textit{s}.
+
+Com esse novo \textit{software} implementado é possível planejar a criação de um aplicativo móvel, novas funcionalidades, implementações de testes unitários, testes de integrações e a integração com o analisador algorítmico implementado por Gabriel Weber.
