--- a/tcc.tex
+++ b/tcc.tex
@@ -168,7 +168,7 @@ A todos vocês, minha sincera gratidão.
 \acro{HTML}[{\textit{HTML}}]{\textit{Hyper Text Markup Language}}
 \acro{HTTP}[\textit{HTTP}]{\textit{Hyper Text Transfer Protocol}}
 \acro{HTTPS}[\textit{HTTPS}]{\textit{Hyper Text Transfer Protocol Secure}}
-\acro{SSL}[\textit{SSl}]{\textit{Secure Socket Layer}}
+\acro{SSL}[\textit{SSL}]{\textit{Secure Socket Layer}}
 \acro{IHC}[{\textit{IHC}}]{Interação humano-computador}
 \acro{JAR}[\textit{JAR}]{\textit{Java Archive}}
 \acro{JAVA EE}[{\textit{JAVA EE}}]{\textit{Java Enterprise Edition}}
@@ -183,7 +183,6 @@ A todos vocês, minha sincera gratidão.
 \acro{WWW}[{\textit{WWW}}]{\textit{World Wide Web}}
 \acro{TCP}[{\textit{TCP}}]{\textit{Transmission Control Protocol}}
 \acro{CSS}[{\textit{CSS}}]{\textit{Cascading Style Sheets}}
-\acro{SSL}[{\textit{SSL}}]{\textit{Secure Socket Layer}}
 \acro{JDBC}[{\textit{JDBC}}]{\textit{Java Database Connectivity}}
 \end{acronym}
 
@@ -192,7 +191,7 @@ A todos vocês, minha sincera gratidão.
 
 \begin{abstract}
 
-Esse trabalho fornece todo o processo de evolução do portal de algoritmos, o trabalho tem por objetivo realizar a evolução do \textit{software} atual para uma versão mais moderna tecnologicamente e estruturalmente, para esse objetivo foram escolhidos tencologias atuais, como \textit{AngularJS}, \textit{Java 8}, \textit{Bootstrap 3}, \textit{Postgreslq 10}. Para atingirmos o objetivo utilizamos engenharia reversa, diagramas de casos de uso, diagrama de robustez, \textit{mockups} de interfaces gráficas e escolhemos a arquitetura \ac{MVC} para guiar no desenvolvimento. 
+Esse trabalho fornece todo o processo de evolução do portal de algoritmos. O trabalho tem por objetivo realizar a evolução do \textit{software} atual para uma versão mais moderna tecnologicamente e estruturalmente, para esse objetivo foram escolhidos tencologias atuais, como \textit{AngularJS}, \textit{Java 8}, \textit{Bootstrap 3}, \textit{Postgreslq 10}. Para atingirmos o objetivo utilizamos engenharia reversa, diagramas de casos de uso, diagrama de robustez, \textit{mockups} de interfaces gráficas e escolhemos a arquitetura \ac{MVC} para guiar no desenvolvimento. 
 
 \keyword{Portal de Algoritmos}
 \keyword{Algoritmos}
