--- a/conteudo/capitulo8.tex
+++ b/conteudo/capitulo8.tex
@@ -1,5 +1,7 @@
 \chapter*{Apêndice B - SQL de criação do banco de dados}\label{SQL}
 
+\textit{Script} de criação das tabelas do banco de dados.
+
 \begin{lstlisting}
 --
 -- PostgreSQL database dump
