--- a/conteudo/capitulo1.tex
+++ b/conteudo/capitulo1.tex
@@ -40,4 +40,4 @@ No Capítulo \ref{cpProposta} é apresentada a modelagem para a evolução do \texti
 
 No Capítulo \ref{seguranca} é apresentado uma proposta de segurança para o servidor, essa segurança deve ser configurada na infra-estrutura.
 
-No Capítulo \ref{cpConsideracoesParciais} são apresentadas as considerações parciais do trabalho.
+No Capítulo \ref{cpConsideracoesParciais} são apresentadas as considerações finais do trabalho.
