--- a/tcc.tex
+++ b/tcc.tex
@@ -191,7 +191,7 @@ A todos vocês, minha sincera gratidão.
 
 \begin{abstract}
 
-Esse trabalho fornece todo o processo de evolução do portal de algoritmos. O trabalho tem por objetivo realizar a evolução do \textit{software} atual para uma versão mais moderna tecnologicamente e estruturalmente, para esse objetivo foram escolhidos tencologias atuais, como \textit{AngularJS}, \textit{Java 8}, \textit{Bootstrap 3}, \textit{Postgreslq 10}. Para atingirmos o objetivo utilizamos engenharia reversa, diagramas de casos de uso, diagrama de robustez, \textit{mockups} de interfaces gráficas e escolhemos a arquitetura \ac{MVC} para guiar no desenvolvimento. 
+Esse trabalho fornece todo o processo de evolução do portal de algoritmos. O trabalho tem por objetivo realizar a evolução do \textit{software} atual para uma versão mais moderna tecnologicamente e estruturalmente. Para esse objetivo foram escolhidos tencologias atuais, como \textit{AngularJS}, \textit{Java 8}, \textit{Bootstrap 3}, \textit{Postgreslq 10}. Para atingirmos o objetivo utilizamos engenharia reversa, diagramas de casos de uso, diagrama de robustez, \textit{mockups} de interfaces gráficas e escolhemos a arquitetura \ac{MVC} para guiar no desenvolvimento. 
 
 \keyword{Portal de Algoritmos}
 \keyword{Algoritmos}
