--- a/conteudo/capitulo5.tex
+++ b/conteudo/capitulo5.tex
@@ -1,6 +1,6 @@
 \chapter{Segurança}\label{seguranca}
 
-O Portal de Algoritmos desatualizado apresenta algumas falhas de segurança, abaixo são citadas apenas algumas dessas falhas. Ao final é apresetando uma indicação para aumentar a segurança das informações \ac{HTTPS}.
+O Portal de Algoritmos desatualizado apresentava algumas falhas de segurança, a seguir são citadas apenas algumas dessas falhas. Ao final é apresetando uma indicação para aumentar a segurança das informações \ac{HTTPS}.
 
 \section{Man in the Middle}
 
