--- a/conteudo/capitulo2.tex
+++ b/conteudo/capitulo2.tex
@@ -29,12 +29,12 @@ Para tornar possível a evolução de \textit{software} é preciso seguir alguns pro
 	\item Usabilidade
 	\item Tecnologias
 		\begin{itemize}
-			\item Python e Django
-			\item Java EE
-			\item Wildfly
+			\item \textit{Python} e \textit{Django}
+			\item \textit{Java EE}
+			\item \textit{Wildfly}
 			\item Padrões de Projeto: \ac{DAO}
 			\item \ac{REST}
-			\item AngularJS
+			\item \textit{AngularJS}
 		\end{itemize}
 \end{itemize}
 
