--- a/conteudo/capitulo4.tex
+++ b/conteudo/capitulo4.tex
@@ -6,7 +6,7 @@ Para descrever a evolução de \textit{software}, nas seções seguintes serão apres
 
 A solução proposta será desenvolvida na linguagem de programação Java, a fim de unificar as tecnologias do gerenciamento do portal de algoritmos com seu analisador algorítmico.
 
-O \textit{software} será construído com um arquitetura orientada a serviços, cujo objetivo é que ele seja disponibilizado em interfaces, ou seja, seja acessível através de \ac{REST}.
+O \textit{software} será construído com uma arquitetura orientada a serviços, cujo objetivo é que ele seja disponibilizado em interfaces, ou seja, seja acessível através de \ac{REST}.
 
 Na evolução do \textit{software} serão mantidas as funcionalidades atuais e adicionadas novas funcionalidas:
 
@@ -1647,7 +1647,7 @@ Na camada de \textit{View} temos a interação com o usuário, essa camada faz apen
 
 \newpage
 
-Além da arquitetura lógica, temos a arquiterura de sistema, que é apresentado na Figura \ref{imgArquiteturaSistema}.
+Além da arquitetura lógica, temos a arquitetura de sistema, que é apresentado na Figura \ref{imgArquiteturaSistema}.
 
 \FloatBarrier
 \begin{figure}[!htb]
@@ -1659,9 +1659,9 @@ Além da arquitetura lógica, temos a arquiterura de sistema, que é apresentado na
 \end{figure}
 \FloatBarrier
 
-Na camada de \textit{View e Controller} utilizamos duas tecnologias, \textit{AngularJS 4 e JAX-RS} com a implementação \textit{Jersey 2.26}, essas tecnologias são responsáveis da exibição do dados e comunicação com a camada de modelos.
+Na camada de \textit{View e Controller} utilizamos duas tecnologias, \textit{AngularJS 4 e JAX-RS} com a implementação \textit{Jersey 2.26}, essas tecnologias são responsáveis pela exibição do dados e comunicação com a camada de modelos.
 
-Na camada de \textit{POJO e JAVA 8} é responsável pela manipulação dos dados transformando-os em objetos interpretados pelo sistema operacional.
+A camada de \textit{POJO e JAVA 8} é responsável pela manipulação dos dados transformando-os em objetos interpretados pelo sistema operacional.
 
 Na camada de persistência temos o \ac{JDBC} que é responsável pela comunicação com o banco de dados \textit{Postgresql} 10.
  
