--- a/conteudo/capitulo7.tex
+++ b/conteudo/capitulo7.tex
@@ -34,7 +34,7 @@ O código 500 é gerado quando o servidor aprensentou algum erro interno.
 
 \section*{API Login}
 
-Para todas as chamadas que necessitam de autenticação para seu uso é preciso realizar o login para obter o token de autenticação, esse token é adicionado no header da requisição.
+Para todas as chamadas que necessitam de autenticação para seu uso é preciso realizar o login para obter o token de autenticação, esse \textit{token} é adicionado no header da requisição.
 
 \subsubsection*{Request}
 
