--- a/tcc.bib
+++ b/tcc.bib
@@ -76,24 +76,24 @@
     author    = {Google},
     title     = {Conteúdo baseado em plug-in não funciona no Google Chrome},
     publisher = {Google Support},
-    year      = {2015},
-    note      = {$<$Disponível em: \url{https://support.google.com/chrome/answer/6213033?hl=pt-BR}$>$. Acesso em: 2 de Novembro de 2015}
+    year      = {2018},
+    note      = {$<$Disponível em: \url{https://support.google.com/chrome/answer/6213033?hl=pt-BR}$>$. Acesso em: Junho de 2018}
 }
 
 @online{Python2015,
     author    = {Python},
     title     = {Python},
     publisher = {Python Software Foundation},
-    year      = {2015},
-    note      = {$<$Disponível em: \url{https://www.python.org/}$>$. Acesso em: 2 de Novembro de 2015}
+    year      = {2018},
+    note      = {$<$Disponível em: \url{https://www.python.org/}$>$. Acesso em: Junho de 2018}
 }
 
 @online{Django2015,
     author    = {Django},
     title     = {Django},
     publisher = {Django Software Foundation},
-    year      = {2015},
-    note      = {$<$Disponível em: \url{https://www.djangoproject.com/}$>$. Acesso em: 2 de Novembro de 2015}
+    year      = {2018},
+    note      = {$<$Disponível em: \url{https://www.djangoproject.com/}$>$. Acesso em: Junho de 2018}
 }
 
 @book{Larman2007,
@@ -162,16 +162,16 @@
     author    = {Java},
     title     = {Java},
     publisher = {Java Platform, Enterprise Edition: The Java EE Tutorial},
-    year      = {2015},
-    note      = {$<$Disponível em: \url{https://docs.oracle.com/javaee/7/tutorial/}$>$. Acesso em: 25 de Novembro de 2015}
+    year      = {2018},
+    note      = {$<$Disponível em: \url{https://docs.oracle.com/javaee/7/tutorial/}$>$. Acesso em: Junho de 2018}
 }
 
 @onlime{Wildfly2015,
     author    = {WildFly},
     title     = {WildFly},
     publisher = {Fly Fast, and Free},
-    year      = {2015},
-    note      = {$<$Disponível em: \url{http://wildfly.org/}$>$. Acesso em: 2 de Dezembro de 2015}
+    year      = {2018},
+    note      = {$<$Disponível em: \url{http://wildfly.org/}$>$. Acesso em: Junho de 2018}
 }
 
 @online{Rest2000,
@@ -179,7 +179,7 @@
     title     = {Architectural Styles and the Design of Network-based Software Architectures},
     publisher = {UNIVERSITY OF CALIFORNIA},
     year      = {2000},
-    note      = {$<$Disponível em: \url{https://www.ics.uci.edu/~fielding/pubs/dissertation/fielding_dissertation.pdf}$>$. Acesso em: 2 de Dezembro de 2015}
+    note      = {$<$Disponível em: \url{https://www.ics.uci.edu/~fielding/pubs/dissertation/fielding_dissertation.pdf}$>$. Acesso em: Junho de 2018}
 }
 
 @online{Galeote2015,
@@ -204,7 +204,7 @@
 	author    = {Owasp},
 	title     = {Man in the Middle},
 	publisher = {},
-	year      = {2015},
+	year      = {2018},
 	note      = {$<$Disponível em: \url{https://www.owasp.org/index.php/Man-in-the-middle_attack}$>$. Acesso em: 3 de Junho de 2018}
 }
 
@@ -212,7 +212,7 @@
 	author    = {Owasp},
 	title     = {SQL Injection},
 	publisher = {},
-	year      = {2016},
+	year      = {2018},
 	note      = {$<$Disponível em: \url{https://www.owasp.org/index.php/SQL_Injection}$>$. Acesso em: 3 de Junho de 2018}
 }
 
