--- a/conteudo/capitulo6.tex
+++ b/conteudo/capitulo6.tex
@@ -2,11 +2,11 @@
 
 O objetivo do trabalho era realizar a implementação de um \textit{software} novo visando a evolução do antigo. Esse objetivo foi entregue em uma forma mais organizada em questão de arquitetura e codificação. Durante o o trabalho foram encontrados diversos problemas no \textit{software} antigo, esses problemas foram sendo resolvidos de diversas formas, como as citadas a seguir.
 
-O portal antigo utilizava tecnologias antigas, como \textit{Java Applet}, \ac{HTML} sem estruturação e sem validações. Esse problema foi resolvido utilizando AngularJS 4, um framework javascript para implementar o consumo de \ac{API} \ac{REST}. Além do consumo de dados é preciso exibir esses dados, então foi utilizado um \textit{framework} de \ac{CSS}, este conhecido como \textit{Bootstrap}. Com ele foi possível criar interfaces responsivas e intuitivas para o uso do \textit{software}.
+O portal antigo utilizava tecnologias desatualizadas, como \textit{Java Applet}, \ac{HTML} sem estruturação e sem validações. Esse problema foi resolvido utilizando \textit{AngularJS 4}, um framework javascript para implementar o consumo de \ac{API} \ac{REST}. Além do consumo de dados é preciso exibir esses dados, então foi utilizado um \textit{framework} de \ac{CSS}, este conhecido como \textit{Bootstrap}. Com ele foi possível criar interfaces responsivas e intuitivas para o uso do \textit{software}.
 
 O novo \textit{software} foi desenvolvido utilizando tecnologias de ponta, como \textit{Java} na última versão estável, \textit{AngulaJS} na versão mais recente estável e um \textit{framework} de \ac{CSS} fácil de utilizar.
 
-Com a nova arquitetura do \textit{software} ficou mais fácil e rápido de implementar novas funcionalidades conforme as necessidades forem surgindo. A arquiteruta engloba uma \ac{API} \ac{REST} fácil de integrar e configurar.
+Com a nova arquitetura do \textit{software} ficou mais fácil e rápido de implementar novas funcionalidades conforme as necessidades forem surgindo. A arquitetura engloba uma \ac{API} \ac{REST} fácil de integrar e configurar.
 
 A interface gráfica ficou mais amigável e intuitiva para o usuário, utilizando padrões de telas, botões, listagem e cadastros em geral.
 
