--- a/iidefs.sty
+++ b/iidefs.sty
@@ -21,7 +21,7 @@
 % definicoes de nomes
 %
 \def\ufrgs{Universidade de Caxias do Sul}
-\def\ii{Centro de Ci{\^e}ncias Exatas e da Tecnologia }
+\def\ii{{\'A}rea de Conhecimento de Ci{\^e}ncias Exatas e Engenharias }
 \def\ppgc{Programa de P{\'o}s-Gradua{\c{c}}{\~a}o em Computa{\c{c}}{\~a}o}
 \def\cgcc{Bacharelado em Sistemas de Informa{\c{c}}{\~a}o}
 \def\cbcc{Curso de Bacharelado em Ci{\^e}ncia da Computa{\c{c}}{\~a}o}
