--- a/tcc.tex
+++ b/tcc.tex
@@ -35,10 +35,6 @@
 \setdescription{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
 \setitemize{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
 \setenumerate{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
-
-% Desenvolvimento da Ferramenta de Gerenciamento do Portal de Algoritmos da UCS
-% Desenvolvimento de Ferramenta de Gerenciamento para o Portal de Algoritmos da UCS
-
 \course{\cgcc}
 \title{\\\large Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da UCS}
 \author{Margarin}{Adriano}
@@ -104,7 +100,7 @@
 {\setlength{\unitlength}{1cm}\makebox(12,6.5){\parbox[c]{12cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm\LARGE{\bf Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da Universidade de Caxias do Sul}\par \normalsize por\par \large Adriano Margarin\par}}}
 \end{center}
 
-{\large Trabalho de Conclusão de Curso submetido ao curso de Bacharelado em Sistemas de Informação do Centro de Ciências Exatas e da Tecnologia da Universidade de Caxias do Sul, como requisito obrigatório para graduação.}
+{\large Trabalho de Conclusão de Curso submetido ao curso de Bacharelado em Sistemas de Informação da Área de Conhecimento de Ciências Exatas e Engenharias da Universidade de Caxias do Sul, como requisito obrigatório para graduação.}
 
 \vfill
 
@@ -120,13 +116,13 @@ Coorientador: {Ricardo Vargas Dorneles\par}
 
 Banca examinadora:\par
 \hspace{1cm} {\setlength{\unitlength}{1cm}
-\makebox(9,1){\parbox[c]{9cm}{\center Ricardo Vargas Dorneles\\ CCET/UCS}}}\par
+\makebox(9,1){\parbox[c]{9cm}{\center Ricardo Vargas Dorneles\\ ACCEE/UCS}}}\par
 \hspace{1cm} {\setlength{\unitlength}{1cm}
-\makebox(9,1){\parbox[c]{9cm}{\center André Luis Martinotto\\ CCET/UCS}}}\par
+\makebox(9,1){\parbox[c]{9cm}{\center André Luis Martinotto\\ ACCEE/UCS}}}\par
 
 \vfill
 
-\hfill{\setlength{\unitlength}{1cm}\makebox(9,2.5){\parbox[c]{9cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm Trabalho de Conclusão de Curso apresentado em\\ 21 de Junho de 2018\par André Gustavo Adami\\ Coordenador}}}
+\hfill{\setlength{\unitlength}{1cm}\makebox(9,2.5){\parbox[c]{9cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm Trabalho de Conclusão de Curso apresentado em\\ 26 de Junho de 2018\par André Gustavo Adami\\ Coordenador}}}
 
 \end{singlespace}
 
@@ -162,7 +158,7 @@ A todos vocês, minha sincera gratidão.
 \acro{API}[\textit{API}]{\textit{Application Programming Interface}}
 \acrodefplural{API}[\textit{APIs}]{\textit{Application Programming Interfaces}}
 \acro{AVA}[\textit{AVA}]{\textit{Ambiente Virtual de Aprendizagem}}
-\acro{CCET}[{CCET}]{Centro de Ciências Exatas e da Tecnologia}
+\acro{CCET}[{CCET}]{ de Ciências Exatas e da Tecnologia}
 \acro{DAO}[{\textit{DAO}}]{\textit{Data Access Object}}
 \acrodefplural{DAO}[{\textit{DAOs}}]{\textit{Data Access Object}}
 \acro{HTML}[{\textit{HTML}}]{\textit{Hyper Text Markup Language}}
@@ -184,6 +180,7 @@ A todos vocês, minha sincera gratidão.
 \acro{TCP}[{\textit{TCP}}]{\textit{Transmission Control Protocol}}
 \acro{CSS}[{\textit{CSS}}]{\textit{Cascading Style Sheets}}
 \acro{JDBC}[{\textit{JDBC}}]{\textit{Java Database Connectivity}}
+\acro{IDE}[{\textit{IDE}}]{\textit{Integrated Development Environment}}
 \end{acronym}
 
 \listoffigures
@@ -215,5 +212,6 @@ Esse trabalho fornece todo o processo de evolução do portal de algoritmos. O tra
 \include{conteudo/capitulo7}
 \include{conteudo/capitulo8}
 \include{conteudo/capitulo9}
+\include{conteudo/capitulo10}
 
 \end{document}
